const expressLayouts package and layout with home

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,10 @@
 <head>
     <title><%=title%></title>
+    <style>
+        body{
+            background-color: rgb(86, 158, 158);
+        }
+    </style>
 </head>
 <body>
     <h1>This is H1 from home</h1>
