--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -1,1 +1,10 @@
 <h1>Sign up </h1>
+<!--user post to send data to server-->
+<form action="/users/create" method="POST">
+    <!--now create action for above users/create route-->
+    <input type="text" name="name" placeholder="Your Name" required>
+    <input type="email" name="email" placeholder="Your Email" required>
+    <input type="password" name="password" placeholder="Password" required>
+    <input type="password" name="confirm_password" placeholder="Confirm Password" required>
+    <input type="submit" value="Sign Up">
+</form>
