--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,5 +1,5 @@
 <h1>Sign in </h1>
-<form action="/users/create-session" method="GET">
+<form action="/users/create-session" method="POST">
     <!--now create action for above users/create-session-->
     <input type="email" name="email" placeholder="Email" required>
     <input type="password" name="password" placeholder="Password" required>
