--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,3 +1,10 @@
 <h1> Social | Profile</h1>
 <p> Name: <%=user.name%></p>
 <p> Email: <%=user.email%></p>
+
+<form action="/users/sign-out" method="POST">
+    <input type="submit" value="Sign Out">
+</form>
+
+
+ 
