--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,13 @@
-<head>
-    <title><%=title%></title>
-    <style>
-        body{
-            background-color: rgb(86, 158, 158);
-        }
-    </style>
-</head>
-<body>
-    <h1>This is H1 from home</h1>
-</body>
-</html>
+
+<h1>
+    Codeial / <%= title %>
+</h1>
+
+
+<section id="feed-posts">
+    <h4>Posts</h4>
+    <form action="/posts/create" id="new-post-form" method="POST">
+        <textarea name="content" cols="30" rows="3" placeholder="Type Here..." required></textarea>
+        <input type="submit" value="Post">
+    </form>
+</section>
