--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,11 +6,12 @@
 
 <section id="feed-posts">
     <h4>Posts</h4>
+    <%if(locals.user){%>
     <form action="/posts/create" id="new-post-form" method="POST">
         <textarea name="content" cols="30" rows="3" placeholder="Type Here..." required></textarea>
         <input type="submit" value="Post">
     </form>
-
+    <%}%>
     <div id="posts-list-container">
         <p><%=posts%></p>
         <ul>
