comment on post working

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,7 +19,7 @@
                 <li>
                     <%=post.content%>
                     <small>
-                        post.user.name
+                        post.user.name<!--post.user.name-->
                     </small>
 
                     <div class="post-comments">
@@ -40,7 +40,7 @@
                                     <%= comment.content %>
                                     <br>
                                     <small>
-                                        <%= comment.user.name %>
+                                  <!--comment.user.nam-->      = comment.user.name %>
                                     </small>
                                 </p>    
                                 <%} %>
