omment.user.name, prepopulate coments user

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -40,7 +40,7 @@
                                     <%= comment.content %>
                                     <br>
                                     <small>
-                                  <!--comment.user.nam-->      = comment.user.name %>
+                                        <%= comment.user.name %>
                                     </small>
                                 </p>    
                                 <%} %>
